--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "firebase": "^10.13.2",
     "framer-motion": "^11.9.0",
     "input-otp": "^1.2.4",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.446.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
@@ -52,6 +53,8 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
     "@eslint/js": "^9.9.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
