--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "firebase": "^10.13.2",
     "framer-motion": "^11.9.0",
     "input-otp": "^1.2.4",
