--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "@tanstack/react-table": "^8.20.5",
     "@zegocloud/zego-uikit-prebuilt": "^2.10.0",
     "add": "^2.0.6",
+    "antd": "^5.21.1",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -55,6 +56,7 @@
     "react-transition-group": "^4.4.5",
     "shadcn": "^2.1.0",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
